[9.1.0] Migrate from URL to URI (#28802)
The `URL` class is a legacy concept and a performance footgun as its
`equals`/`hashCode` methods call out to the network. This affected the
event subscriber `CacheHitReportingModule`, which stored `URL`s in a Set
and thus triggered DNS resolution, even if all downloads hit the cache.

While most of this change is not expected to cause any change in
behavior, it has to fix a regression introduced by
https://github.com/bazelbuild/bazel/commit/8cefb8bed4ac82df8640682517372a9249732352:
As of that commit, user info has no longer been forwarded to the new
location requested by a redirect if the host and port stay the same.
This was masked by insufficient test cases that relied on `URL#equals`,
which ignores user info.

Work towards https://github.com/bazelbuild/bazel/issues/25068

Closes https://github.com/bazelbuild/bazel/pull/28661.

PiperOrigin-RevId: 871745758
Change-Id: Ib4783d28ac155315a7bcf309645118ec02ff783d

Commit
https://github.com/bazelbuild/bazel/commit/5594c2a6cdff8713476b531f603b3d0c841b2361,
https://github.com/bazelbuild/bazel/commit/63f32cea05de060ff9d89ac9abf5feb6628566b3,
https://github.com/bazelbuild/bazel/commit/eded4bb2b49c63464f58268dff1a7bcfdb18a9

---------

Co-authored-by: ashutosh0x <ashutoshkumarsingh0x@gmail.com>
Co-authored-by: Will Stranton <2659963+willstranton@users.noreply.github.com>
Co-authored-by: Fabian Meumertzheim <fabian@meumertzhe.im>